--- a/wordy/package.json
+++ b/wordy/package.json
@@ -37,6 +37,7 @@
   },
   "devDependencies": {
     "@babel/plugin-transform-private-property-in-object": "^7.24.7",
+    "@babel/plugin-proposal-private-property-in-object": "^7.24.7",
     "@eslint/js": "^9.7.0",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.35.0",
