--- a/mimesWeep/package.json
+++ b/mimesWeep/package.json
@@ -13,6 +13,7 @@
     "aws-amplify": "^6.4.3",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
