Add new icons for devices, back to Mimesweep

--- a/mimesWeep/public/manifest.json
+++ b/mimesWeep/public/manifest.json
@@ -1,11 +1,33 @@
 {
-  "short_name": "MIMESWEEP",
-  "name": "MIMESWEEP",
+  "short_name": "Mimesweep",
+  "name": "Mimesweep",
   "icons": [
     {
       "src": "favicon.ico",
-      "sizes": "256x256 192x192 180x180 144x144 96x96 64x64 32x32 24x24 20x20 16x16",
+      "sizes": "256x256",
       "type": "image/x-icon"
+    },
+    {
+      "src": "pwa-64x64.png",
+      "sizes": "64x64",
+      "type": "image/png"
+    },
+    {
+      "src": "pwa-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "pwa-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "maskable-icon.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
     }
   ],
   "start_url": ".",
